@@ -3,51 +3,72 @@ package org.example.carrent.services;
 import org.example.carrent.models.Rental;
 import org.example.carrent.models.Vehicle;
 import org.example.carrent.repositories.IRentalRepository;
+import org.example.carrent.repositories.IUserRepository;
 import org.example.carrent.repositories.IVehicleRepository;
+import org.springframework.stereotype.Service;
 
 import java.time.LocalDate;
 import java.util.List;
-import java.util.Optional;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
+@Service
 public class RentalService {
-    private final IVehicleRepository vehicleRepository;
-    private final IRentalRepository rentalRepository;
 
-    public RentalService(IVehicleRepository vehicleRepository, IRentalRepository rentalRepository) {
-        this.vehicleRepository = vehicleRepository;
+    private final IRentalRepository rentalRepository;
+    private final IVehicleRepository vehicleRepository;
+    private final IUserRepository userRepository;
+
+    public RentalService(IRentalRepository rentalRepository,
+                         IVehicleRepository vehicleRepository,
+                         IUserRepository userRepository) {
         this.rentalRepository = rentalRepository;
+        this.vehicleRepository = vehicleRepository;
+        this.userRepository = userRepository;
     }
 
-    public List<Rental> getAllRentals() {
+    public List<Rental> getAll() {
         return rentalRepository.getAll();
     }
 
-    public List<Rental> getRentalsByUser(String userLogin) {
+    public List<Rental> list() {
+        return rentalRepository.getAll();
+    }
+
+    public List<Rental> findAllRentals() {
+        return rentalRepository.getAll();
+    }
+
+    public List<Rental> findUserRentals(String userLogin) {
         return rentalRepository.getAll()
                 .stream()
-                .filter(r -> r.getUserLogin().equals(userLogin))
-                .toList();
+                .filter(rental -> rental.getUserLogin().equals(userLogin))
+                .collect(Collectors.toList());
+    }
+
+    public List<Rental> userRentals(String userLogin) {
+        return findUserRentals(userLogin);
+    }
+
+    public boolean hasActiveRental(String userLogin) {
+        return rentalRepository.findActiveByUserLogin(userLogin).isPresent();
     }
 
     public Rental rentVehicle(String userLogin, String vehicleId) {
+        if (userRepository.findByLogin(userLogin).isEmpty()) {
+            throw new RuntimeException("Nie znaleziono użytkownika: " + userLogin);
+        }
+
+        Vehicle vehicle = vehicleRepository.findById(vehicleId)
+                .orElseThrow(() -> new RuntimeException("Nie znaleziono pojazdu: " + vehicleId));
+
+        if (vehicle.isRented()) {
+            throw new RuntimeException("Pojazd jest już wypożyczony.");
+        }
+
         if (rentalRepository.findActiveByUserLogin(userLogin).isPresent()) {
-            throw new IllegalStateException("Użytkownik ma już aktywne wypożyczenie.");
+            throw new RuntimeException("Użytkownik ma już aktywne wypożyczenie.");
         }
-
-        Optional<Vehicle> vehicle = vehicleRepository.findById(vehicleId);
-
-        if (vehicle.isEmpty()) {
-            throw new IllegalArgumentException("Nie znaleziono pojazdu.");
-        }
-
-        if (vehicle.get().isRented()) {
-            throw new IllegalStateException("Pojazd jest już wypożyczony.");
-        }
-
-        Vehicle rentedVehicle = vehicle.get();
-        rentedVehicle.setRented(true);
-        vehicleRepository.update(rentedVehicle);
 
         Rental rental = new Rental(
                 UUID.randomUUID().toString(),
@@ -58,66 +79,35 @@ public class RentalService {
 
         rentalRepository.add(rental);
 
+        vehicle.setRented(true);
+        vehicleRepository.update(vehicle);
+
         return rental;
     }
 
-    public Rental returnVehicleWithInfo(String userLogin) {
-        Optional<Rental> rental = rentalRepository.findActiveByUserLogin(userLogin);
-
-        if (rental.isEmpty()) {
-            throw new IllegalStateException("Użytkownik nie ma aktywnego wypożyczenia.");
-        }
-
-        Rental activeRental = rental.get();
-        activeRental.setEndDate(LocalDate.now().toString());
-        rentalRepository.update(activeRental);
-
-        vehicleRepository.findById(activeRental.getVehicleId())
-                .ifPresent(v -> {
-                    v.setRented(false);
-                    vehicleRepository.update(v);
-                });
-
-        return activeRental;
-    }
-
     public boolean rent(String userLogin, String vehicleId) {
-        try {
-            rentVehicle(userLogin, vehicleId);
-            return true;
-        } catch (RuntimeException e) {
-            return false;
-        }
+        rentVehicle(userLogin, vehicleId);
+        return true;
     }
 
+    public Rental returnVehicle(String userLogin) {
+        Rental rental = rentalRepository.findActiveByUserLogin(userLogin)
+                .orElseThrow(() -> new RuntimeException("Brak aktywnego wypożyczenia."));
 
-    public List<Rental> findAllRentals() {
-        return rentalRepository.getAll();
+        rental.setEndDate(LocalDate.now().toString());
+        rentalRepository.update(rental);
+
+        Vehicle vehicle = vehicleRepository.findById(rental.getVehicleId())
+                .orElseThrow(() -> new RuntimeException("Nie znaleziono pojazdu: " + rental.getVehicleId()));
+
+        vehicle.setRented(false);
+        vehicleRepository.update(vehicle);
+
+        return rental;
     }
 
-    public List<Rental> findUserRentals(String userLogin) {
-        return rentalRepository.getAll()
-                .stream()
-                .filter(r -> r.getUserLogin().equals(userLogin))
-                .toList();
-    }
-
-    public boolean returnVehicle(String userLogin) {
-        try {
-            returnVehicleWithInfo(userLogin);
-            return true;
-        } catch (RuntimeException e) {
-            return false;
-        }
-    }
-
-    public boolean hasActiveRental(String userLogin) {
-        return rentalRepository.findActiveByUserLogin(userLogin).isPresent();
-    }
-
-    public boolean vehicleHasActiveRental(String vehicleId) {
-        return rentalRepository.getAll()
-                .stream()
-                .anyMatch(r -> r.getVehicleId().equals(vehicleId) && r.isActive());
+    public boolean returnVehicleBoolean(String userLogin) {
+        returnVehicle(userLogin);
+        return true;
     }
 }
